--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-brotlipy==0.7.0
-certifi==2022.6.15.1
-docopt==0.6.2
-pycosat==0.6.3
-yarg==0.1.9
-clint==0.5.1
-pyfiglet==0.8.post1
+args==0.1.0
 autopep8==1.7.0
+certifi==2022.9.14
+charset-normalizer==2.1.1
+clint==0.5.1
+dominate==2.7.0
+idna==3.4
+pycodestyle==2.9.1
+pyfiglet==0.8.post1
+requests==2.28.1
+toml==0.10.2
+urllib3==1.26.12
+yarg==0.1.9
