--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "input": "./data",
     "output": ".",
-    "stylesheet": "https://cdn.jsdelivr.net/gh/kimeiga/bahunya/dist/bahunya.min.css"
+    "stylesheet": "https://cdn.jsdelivr.net/gh/kimeiga/bahunya/dist/bahunya.min.css",
+    "feature": "feature"
 }
