--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
     "input": "./data",
     "output": ".",
     "stylesheet": "https://cdn.jsdelivr.net/gh/kimeiga/bahunya/dist/bahunya.min.css",
-    "feature": "feature"
+    "lang": "fr",
+    "feature": "feature - should be ignored for now"
 }
