Revert "changed sample data in config"
This reverts commit 63c1c9a7330b6cd1f4ed9b660d8c1a562a047e64.

reverted

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "input": "./data",
+    "output": ".",
     "stylesheet": "https://cdn.jsdelivr.net/gh/kimeiga/bahunya/dist/bahunya.min.css",
     "lang": "fr",
     "feature": "feature - should be ignored for now"
