--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.1.1
 clint==0.5.1
 dominate==2.7.0
 idna==3.4
+markdown2==2.4.6
 pycodestyle==2.9.1
 pyfiglet==0.8.post1
 requests==2.28.1
